G17/styleSheet/base.css
/* BASE CONTENT */

* {                                 /* resets margin/padding to 0*/
    margin: 0;
    padding: 0;
}

body {
    background-color:  #DDDDDD;
    height: 100%;
}

#wrapper {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

#wrapper a {
    display: inline;
    margin:  auto;
    padding: 0 25px;
    
}

#header {
    background-color: white;
    position: fixed;
    width: 100%;
    height: 60px;
    border-bottom: 1px ridge ;
    
}
#header p {
    font-size:  200%;
    line-height: 60px;
    background-color: black;
    width: 135px;
    height: 60px;
    padding: 0 20px;
    color: white;
}

#user {
    line-height:  60px;
    
    position:  absolute;
    right: 0; 
    
}

#user a {
    color:  black;
    text-decoration: none;
}

#user .profile {
    background-color: yellow;
    padding:  0;
    float:  right;
    text-align:  center;
    border-bottom:  1px solid yellow;
    
}

#user .register {
    background-color: orange;
    padding:  0;
    float:  right;
    text-align: center;
    border-bottom: 1px solid orange;
    border-left:  1px solid black;
}

#header a {                            /* TEMPORARY*/
    padding: 10px;
    font-size: 100%;
    width: 115px;
    height:  100%;
}

#banner img {
    padding-top: 100px;
    padding-bottom: 50px;
    display: block;
    margin: auto;
}

#content p {                        /* only content indents; fixed issue with footer indent*/
    text-indent: 40px;
}

#content {
    background-color:  white;
    padding-bottom: 20px;
    padding-top: 20px;

}

#footer {
    background-color:  #EEEEEE;
    text-align: center;
    padding: 10px;
       
}

/* HOME CONTENT */

.homeImage {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 20px;
}

.homeContent {
    font-size: large;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

/* EXERCISE & NUTRITION CONTENT */

#activityTime {
    display: block;         
    text-align:  center;            /* centering the images*/
    padding: 20px;
}

#activityTime li{
    list-style-type: none;
    text-align: center;
    display:  inline
}

#activityTime a {
    margin: auto;   
    padding-left: 25px;
    padding-right: 20px;
    padding-bottom: 50px;
}

/* PROFILE CONTENT */


#displayPicture {
    float: left;
    padding-left: 25px;

}

#profileInfo {
    width: 450px;
    float: left; 
    padding-left: 40px;
}

#calendar {
    clear:  both;
    padding-top:  30px;
}

#achievements {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding-top: 30px;
    padding-bottom: 30px;
}

/* REGISTRATION*/

#whyRegister {
    width: 500px;
    float: left;
    padding-left: 25px;
}

#whyRegister h2 {
    padding-bottom: 20px;
}

#whyRegister p {
    padding-bottom: 40px;
}

#whyRegister img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#inputBoxes {
    padding-left: 575px;
}

